--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -548,16 +548,19 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 /* .pagePaddingWrap{padding: 0px 1.5rem; box-sizing: border-box; width: 100%; height: 100vh; padding-top: 60px; margin-bottom: 60px;} */
 .mt-header{margin-top: 50px;}
  /* .profileTitle{font-size: 15px; font-weight: bold; color: #6768A7;} */
- .formEditorTextPadding{
-   padding : 0 20px;
- }
- .selectPadding {
+.memoTextPadding{
+  padding : 10px;
+}
+.formEditorTextPadding{
+  padding : 0 20px;
+}
+.selectPadding {
   padding: 0 7.5px !important;
 }
 .noneSelectPadding {
   padding: 0 15px !important;
 }
- .pushDetailPaperEffect {
+.pushDetailPaperEffect {
   content: '';
   position: absolute;
   display: block;
