--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -438,6 +438,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .highLightYellow{background: #FFE926; height: 7px;}
 .grayBlack{color: #505050 !important; }
 .lightGray{color: #A1A1A1 !important;}
+.lightGrayNImpo{color: #A1A1A1 ;}
 .whitePurple{color: #f4f4f9}
 .whitePurpleBG{background-color: #f4f4f9 !important}
 .lightPurple{color: rgba(186, 187, 215, 0.5);}
