--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -452,6 +452,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .CLDeepGrayColor {color: #636363;}
 .commonBlue{color: #3b3dce!important;}
 .commonLightColor {color: #7678E2!important;}
+.commonLightBGColor {background-color: #7678E2!important;}
 .commonLightColorBorder {border: 1px solid #7678E2!important;}
 .commonLightColorBorder2 {border: 2px solid #7678E2!important;}
 .commonColor{color:#6768A7 !important;}
