--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -478,6 +478,13 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 
 .commonDarkGray { color: #6D6D6D;}
 
+.firstTextLine {
+  width: 100%;
+  height: 1px;
+  margin-bottom: 10px;
+  border-top: 1px solid #F1F1F1;
+}
+
 /* 불투명 색: #dcddeb */
 
 .mSide-01 { margin: 0 0.1rem; }
