--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -43,7 +43,14 @@ pre span{
   /* font-family: NotoSans !important; */
   font-size: 14px !important;
 }
-
+pre img {
+  -webkit-text-size-adjust:none;
+  -ms-user-select: none;
+  -moz-user-select: -moz-none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  user-select: none;
+}
 
 
 /* .cursorDragAll {
