--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -464,7 +464,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .commonLightBGColor {background-color: #7678E2!important;}
 .commonLightColorBorder {border: 1px solid #7678E2!important;}
 .commonLightColorBorder2 {border: 2px solid #7678E2!important;}
-.commonColor{color:#6768A7 !important;}
+/* .commonColor{color:#6768A7 !important;} */
 .commonColor{color:#5F61BD !important;}
 
 .commonColorBorder{border:1px solid #6768A7 !important;}
@@ -621,7 +621,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   position: absolute;
   bottom: 0;
   height  : 1px;
-  width   : 90%;
+  width   : calc(100% - 20px);
   left: 50%;
   transform: translateX(-50%);
   border-bottom : 2px solid #6768a7
