--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -54,6 +54,12 @@ pre img {
   user-select: none;
 }
 
+/* .cursorDragText {
+  -webkit-user-select: text !important;
+  -moz-user-select: text !important;
+  -ms-use-select: text !important;
+  user-select: text !important;
+} */
 
 /* .cursorDragAll {
   -webkit-user-select: all !important;
