--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -727,7 +727,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   border: none !important;
 }
 
-.introBackground{background-color: #6768A7; width: 100%; height: 100vh; padding-top: 10%}
+.introBackground{background-color: #5F61BD ; width: 100%; height: 100vh; padding-top: 10%}
 .introWhiteCard{background-color: #fff; min-height: 400px; border-radius: 10px; width: 90%; height: 50%; box-sizing: border-box; margin: 10% auto; }
 
 .textOverdot{
