--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -15,7 +15,7 @@ html {
   overflow:auto;
 }
 body {
-  background: #e8e8e8!important;
+  /* // background: #e8e8e8!important; */
   -webkit-text-size-adjust:none;
   -ms-user-select: none;
   -moz-user-select: -moz-none;
