--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -192,6 +192,13 @@ input, select {
   }
 }
 
+.scrollOn {
+  overflow: hidden auto;
+}
+.scrollHidden {
+  overflow: hidden;
+}
+
 ::-webkit-scrollbar {
   display: none;
 }
