--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -567,6 +567,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .w-80P{width: 80%;}
 .w-90P{width: 90%;}
 .w100P{width: 100%;}
+.w33P{width: 33%;}
 
 .w-2rem{width: 2rem;}
 .w-3rem{width: 3rem;}
@@ -602,6 +603,9 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mtop-2{margin-top: 2rem;}
 .mtop-3{margin-top: 3rem;}
 
+.mTop10 {margin-top: 10px !important;}
+.mTop20 {margin-top: 20px;}
+
 .mbottom-01{margin-bottom: 0.1rem;}
 .mbottom-03{margin-bottom: 0.3rem;}
 .mbottom-05{margin-bottom: 0.5rem;}
@@ -624,6 +628,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mright-6{margin-right: 6rem;}
 .mright-10{margin-right: 10rem;}
 
+.mRight05 {margin-right: 5px;}
+
 .mleft-03{margin-left: 0.3rem;}
 .mleft-05{margin-left: 0.5rem;}
 .mleft-1{margin-left: 1rem;}
@@ -640,6 +646,20 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .textLeft{text-align: left;}
 .textCenter{text-align: center;}
 .textRight{text-align: right;}
+
+.flexAlignCenter {
+  display: flex;
+  align-items: center;
+}
+.flexJustiCenter {
+  display: flex;
+  justify-content: center;
+}
+.flexCenter {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 .header_footer{display:flex; align-items: center; }
 .headerShadow{box-shadow: 0px 7px 9px -9px #00000036;}
