--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -551,6 +551,9 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .ptop-50 {
   padding-top: 50px;
 }
+.ptop-80 {
+  padding-top: 80px;
+}
 .wh100P {
   width: 100%;
   height: 100%;
@@ -659,6 +662,13 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.flexColumn {
+  flex-direction: column;
+}
+
+.dispContents {
+  display: contents;
 }
 
 .header_footer{display:flex; align-items: center; }
