--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -621,6 +621,8 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mbottom-4{margin-bottom: 4rem;}
 .mbottom-5{margin-bottom: 5rem;}
 
+.mBottom10 {margin-bottom: 10px;}
+
 .mright-01{margin-right: 0.1rem;}
 .mright-02{margin-right: 0.2rem;}
 .mright-03{margin-right: 0.3rem;}
