--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -340,6 +340,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   line-height: 40px;
 }
 
+.font50{font-size: 50px;}
 .font45{font-size: 45px}
 .font35{font-size: 35px}
 .font30{font-size: 30px}
@@ -351,7 +352,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .font15{font-size: 15px}
 .font14{font-size: 14px}
 .font13{font-size: 13px}
-.font12{font-size: 12px}
+.font12{font-size: 12px !important}
 .font11{font-size: 11px}
 .font10{font-size: 10px}
 .font9{font-size: 9px}
@@ -613,7 +614,9 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mtop-2{margin-top: 2rem;}
 .mtop-3{margin-top: 3rem;}
 
+
 .mTop0 {margin-top: 0 !important;}
+.mTop05 {margin-top: 5px !important;}
 .mTop10 {margin-top: 10px !important;}
 .mTop20 {margin-top: 20px;}
 
@@ -627,6 +630,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mbottom-5{margin-bottom: 5rem;}
 
 .mBottom10 {margin-bottom: 10px;}
+.mBottom20 {margin-bottom: 20px !important;}
 
 .mright-01{margin-right: 0.1rem;}
 .mright-02{margin-right: 0.2rem;}
@@ -642,6 +646,7 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .mright-10{margin-right: 10rem;}
 
 .mRight05 {margin-right: 5px;}
+.mRight10 {margin-right: 10px;}
 
 .mleft-03{margin-left: 0.3rem;}
 .mleft-05{margin-left: 0.5rem;}
