--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -301,12 +301,28 @@ input, select {
   font-style: normal;
 }
 
-#moTheAlimWrap {
-  font-family: KoPubDotumMedium;
-  /* font-family: NotoSans; */
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 600; /* Original is 500. 600 for instead bold */
+  font-display: swap;
+  src: local('Pretendard Medium'),
+    url('https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/woff2/Pretendard-Medium.woff2') format('woff2'),
+    url('https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/woff/Pretendard-Medium.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'Pretendard';
+  font-weight: 300;
+  font-display: swap;
+  src: local('Pretendard Light'),
+    url('https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/woff2/Pretendard-Light.woff2') format('woff2'),
+    url('https://cdn.jsdelivr.net/npm/pretendard@1.3.8/dist/web/static/woff/Pretendard-Light.woff') format('woff');
+}
+
+#moTheAlimWrap,
 #uniBuzzyWrap {
-  font-family: KoPubDotumMedium;
+    font-family: Pretendard, -apple-system, BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI", "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic", "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;;
+  /* font-family: NotoSans; */
 }
 
 .headerBottom {box-shadow: 0px 7px 9px -9px #00000036;}
