Reduce duplicated codes.
in pages

--- a/src/assets/css/UB_common.css
+++ b/src/assets/css/UB_common.css
@@ -573,6 +573,9 @@ p{margin-bottom: 0; font-size: 1.5rem;}
 .pTop-05 {
   padding-top: 5px;
 }
+.pTop-20 {
+  padding-top: 20px;
+}
 .ptop-50 {
   padding-top: 50px;
 }
