--- a/src/assets/css/common.css
+++ b/src/assets/css/common.css
@@ -1261,3 +1261,47 @@ input, .mainRefreshBtn, .mainMenuIcon, .footerRouter, .roundTab, .searchIcon, .m
     0% {transform: translateY(0);}
     100% { transform: translateY(100%);}
 }
+
+.mx-table-date .today{
+  color: #ff9f32!important;
+}
+.mx-calendar-panel-date{width: 100% !important; border-bottom: 1px solid #ccc;}
+.mx-calendar-content .cell.active{
+  background-color: #6768A7!important;
+}
+.mx-calendar-content .hover-in-range {
+  background-color: #cdceff56!important;
+}
+.mx-datepicker input:hover {
+  border: 1px solid #8183d6;
+}
+
+.mx-datepicker-popup {position: absolute; top: 300px; right: 2rem; z-index: 999999!important;}
+.mx-datepicker-range {width: calc(100%)!important; float: left;}
+
+.mx-icon-calendar {
+  top: 20px!important;
+  color: #6768A7!important;
+}
+.mx-icon-calendar svg{
+  width: 1.5em!important;
+  height: 1.5em!important;
+  display: none;
+}
+.mx-icon-clear svg{
+  display: none;
+}
+
+.mx-input {
+  height: 40px!important;
+  border-radius: 5px !important;
+  padding: 1px 5px !important;
+  box-shadow: none!important;
+  float: left;
+  box-sizing: border-box!important;
+  border: none !important;
+  /* background-color: rgb(239, 239, 239) !important; */
+  font-size: 20px !important;
+  text-align: center !important;
+  font-weight: bold !important;
+}
