--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -524,6 +524,15 @@ p{margin-bottom: 0; font-size: 1.5rem;}
   stroke-width:2px;
 }
 
+.pswp {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 99!important;
+}
+
 .CDeepColor{ color: #5F61BD !important; }
 .CLightBgColor{ background-color: #a2a3e1 !important;}
 .CDeepBgColor{ background-color: #5F61BD !important;}
