--- a/src/assets/css/Tal_common.css
+++ b/src/assets/css/Tal_common.css
@@ -195,6 +195,20 @@ input, select {
   display:flex;
   align-items:center;
 }
+.admBtn {
+  min-width:45px;
+  height:35px;
+  line-height:35px;
+  white-space:nowrap;
+  padding:0 20px;
+  vertical-align:middle;
+  text-align:center;
+  box-shadow:0 0 3px 1px rgba(0,0,0,0.1);
+  border-radius:10px;
+  border:none;
+  font-weight:bold;
+  color:#222;
+}
 
 
 @media screen and (max-width: 300px) {
